--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1>Hello</h1>
+<title>Forward | Advocating for change</title>
+<meta name="theme-color" content="#94dab8">
+
+<style>
+  body, html {
+  height: 100%;
+  margin: 0;
+}
+  .middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+   font-family: "Courier New", Courier, monospace;
+  }
+</title>
+   <div class="middle">
+    <h1>COMING SOON</h1>
+  </div>
+  
