--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <title>Forward | Advocating for change</title>
 <meta name="theme-color" content="#94dab8">
+<meta charset="UTF-8">
+<meta name="description" content="Forward | Advocating for Change">
 
 <style>
   body, html {
