--- a/index.html
+++ b/index.html
@@ -3,12 +3,75 @@
 <meta charset="UTF-8">
 <meta name="description" content="Forward | Advocating for Change">
 
+<!DOCTYPE html>
+<html>
 <style>
-  body, html {
+body, html {
   height: 100%;
   margin: 0;
 }
-</title>
-    <h1>COMING SOON</h1>
 
+.bgimg {
+  background-image: url('/w3images/forestbridge.jpg');
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 25px;
+}
+
+.topleft {
+  position: absolute;
+  top: 0;
+  left: 16px;
+}
+
+.bottomleft {
+  position: absolute;
+  bottom: 0;
+  left: 16px;
+}
+
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
   
+  a { color: white;
+    text-decoration: none;
+  }
+  
+  a:hover{
+   color: grey;
+    text-decoration: underline;
+  }
+
+hr {
+  margin: auto;
+  width: 40%;
+}
+</style>
+<body>
+
+<div class="bgimg">
+  <div class="topleft">
+    <p>Logo</p>
+  </div>
+  <div class="middle">
+    <h1>COMING SOON</h1>
+    <hr>
+    <p>Follow our Twitter: <a href="https://twitter.com/UK4Forward">@UK4Forward</a></p>
+  </div>
+  <div class="bottomleft">
+    <p>Some text</p>
+  </div>
+</div>
+
+</body>
+</html>
+
