--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <title>Forward | Advocating for change</title>
 <meta name="theme-color" content="#94dab8">
 <meta charset="UTF-8">
-<meta name="description" content="Forward | Advocating for Change">
+<meta name="application-name" content="Forward">
+<meta name="description" content="Advocating for Change">
 
 <!DOCTYPE html>
 <html>
