--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <title>Forward | Advocating for change</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#94dab8">
 <meta charset="UTF-8">
 <meta name="application-name" content="Forward">
