--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#94dab8">
 <meta charset="UTF-8">
-<meta name="application-name" content="Forward">
+<meta property="og:title" content="Forward" />
 <meta name="description" content="Advocating for Change">
 
 <!DOCTYPE html>
