--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ body, html {
   color: white;
   font-family: "Courier New", Courier, monospace;
   font-size: 25px;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
 }
 
 .topleft {
