--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('bg.jpg');
+  background-image: url('e.png');
   height: 100%;
   background-position: center;
   background-size: cover;
   position: relative;
-  color: white;
+  color: black;
   font-family: "Courier New", Courier, monospace;
   font-size: 25px;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
 }
 
 .topleft {
@@ -46,7 +44,7 @@ body, html {
   text-align: center;
 }
   
-  a { color: white;
+  a { color: black;
     text-decoration: none;
   }
   
