--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>Logo</p>
+    <p><img src="picture1.png" width="20%"></p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
@@ -70,7 +70,7 @@ hr {
     <p>Follow our Twitter: <a href="https://twitter.com/UK4Forward">@UK4Forward</a></p>
   </div>
   <div class="bottomleft">
-    <p>Some text</p>
+    <p>We are <b>not</b> a political party.</p>
   </div>
 </div>
 
