--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p><img src="picture1.png"></p>
+    <p><img src="Picture1.png"></p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
