--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta property="og:title" content="Forward" />
 <meta name="description" content="Advocating for Change">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!DOCTYPE html>
 <html>
 <style>
@@ -57,6 +59,10 @@ hr {
   margin: auto;
   width: 40%;
 }
+  
+.smalltext{
+  font-size: 16px;
+  }
 </style>
 <body>
 
@@ -67,7 +73,8 @@ hr {
   <div class="middle">
     <h1>COMING SOON</h1>
     <hr>
-    <p>Follow our Twitter: <a href="https://twitter.com/UK4Forward">@UK4Forward</a></p>
+    <p>Follow our Twitter: <a href="https://twitter.com/UK4Forward">@UK4Forward</a> <i class="fa fa-twitter"></i></p>
+    <p class="smalltext">Email us: <a href="mailto:contact@forwarduk.xyz">Send email</a> <i class="fa fa-envelope"></i></p>
   </div>
   <div class="bottomleft">
     <p>We are <b>not</b> a political party.</p>
