--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p><img src="Picture1.png"></p>
+    <p>FORWARD</p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
