--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ hr {
     <hr>
     <p>Follow our Twitter: <a href="https://twitter.com/UK4Forward">@UK4Forward</a> <i class="fa fa-twitter"></i></p>
     <p class="smalltext">Email us: <a href="mailto:contact@forwarduk.xyz">Send email</a> <i class="fa fa-envelope"></i></p>
-    <p class="smalltext">Keep Informed: <a href="https://www.getrevue.co/profile/forwarduk">Newsletter</a> <i class="fa fa-envelope"></i></p>
+    <p class="smalltext">Keep Informed: <a href="https://www.getrevue.co/profile/forwarduk">Newsletter</a> <i class="fa fa-newspaper-o"></i></p>
   </div>
   <div class="bottomleft">
     <p>We are <b>not</b> a political party.</p>
