--- a/documents.html
+++ b/documents.html
@@ -61,7 +61,10 @@ body {
 }
   
 .title1 {
-  padding-left: 20px;
+  padding-left: 4%;
+  }
+.doc2 {
+  padding-left: 6%;
   }
 </style>
 </head>
@@ -78,3 +81,7 @@ body {
  <br>
   
   <h1 class="title1">Documents:</h1>
+<br>
+  <p class="doc2">Founding Document: <a>Read here</a> <i class="fa fa-file-text"></i</p>
+  <p class="doc2">More soon.</p>
+  
