--- a/documents.html
+++ b/documents.html
@@ -82,6 +82,6 @@ body {
   
   <h1 class="title1">Documents:</h1>
 <br>
-  <p class="doc2">Founding Document: <a>Read here</a> <i class="fa fa-file-text"></i></p>
+  <p class="doc2">Founding Document: <a href="launch.pdf">Read here</a> <i class="fa fa-file-text"></i></p>
   <p class="doc2">More soon.</p>
   
