--- a/documents.html
+++ b/documents.html
@@ -66,6 +66,14 @@ body {
 .doc2 {
   padding-left: 6%;
   }
+.doc3 {
+  padding-left: 7%;
+  }
+hr {
+  padding-left: 4%;
+  width: 30%;
+  align: left;
+  }
 </style>
 </head>
 <body>
@@ -83,5 +91,9 @@ body {
   <h1 class="title1">Documents:</h1>
 <br>
   <p class="doc2">Founding Document: <a href="launch.pdf">Read here</a> <i class="fa fa-file-text"></i></p>
+  <p class="doc3">This document outlines our founding & core values as a group, this will be adapted as and when the group decides, but it will be at the decision of members.</p>  
+  
+  <hr>
+  
   <p class="doc2">More soon.</p>
   
