--- a/documents.html
+++ b/documents.html
@@ -74,6 +74,17 @@ hr {
   width: 30%;
   align: left;
   }
+a {
+  color: #808080;
+  text-decoration: none;
+  }
+a:hover {
+  color: #696969;
+  text-decoration: underline;
+  }
+a:visited{
+  color: #808080;
+  }
 </style>
 </head>
 <body>
@@ -91,7 +102,7 @@ hr {
   <h1 class="title1">Documents:</h1>
 <br>
   <p class="doc2">Founding Document: <a href="launch.pdf">Read here</a> <i class="fa fa-file-text"></i></p>
-  <p class="doc3">This document outlines our founding & core values as a group, this will be adapted as and when the group decides, but it will be at the decision of members.</p>  
+  <p class="doc3">This document outlines our founding & core values as a group, this will be adapted as and when the group decides, but it will be at the decision of members. <b>(Last updated: 26th August, 2022)</b></p>  
   
   <hr>
   
