--- a/documents.html
+++ b/documents.html
@@ -17,7 +17,13 @@ body {
   padding: 20px 10px;
   box-shadow: 0 8px 8px -4px gray;
 }
-
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: black;
+}
 .header a {
   float: left;
   color: black;
@@ -101,10 +107,13 @@ a:visited{
   
   <h1 class="title1">Documents:</h1>
 <br>
-  <p class="doc2">Founding Document: <a href="launch.pdf">Read here</a> <i class="fa fa-file-text"></i></p>
+  <p class="doc2">Founding Document: <a href="Launch.pdf">Read here</a> <i class="fa fa-file-text"></i></p>
   <p class="doc3">This document outlines our founding & core values as a group, this will be adapted as and when the group decides, but it will be at the decision of members. <b>(Last updated: 26th August, 2022)</b></p>  
   
   <hr>
   
   <p class="doc2">More soon.</p>
   
+<div class="footer">
+  <p>Forward UK | We are <b>not</b> a political party. | Advocating for Change | <a href="https://twitter.com/UK4Forward"><i class="fa fa-twitter"></i></a> | <a href="mailto:contact@forwarduk.xyz"><i class="fa fa-envelope"></i></a> | 2022</p>
+</div>
