--- a/documents.html
+++ b/documents.html
@@ -115,5 +115,5 @@ a:visited{
   <p class="doc2">More soon.</p>
   
 <div class="footer">
-  <p>Forward UK | We are <b>not</b> a political party. | Advocating for Change | <a href="https://twitter.com/UK4Forward"><i class="fa fa-twitter"></i></a> | <a href="mailto:contact@forwarduk.xyz"><i class="fa fa-envelope"></i></a> | 2022</p>
+  <p span="padding-left: 4px;">Forward UK | We are <b>not</b> a political party. | Advocating for Change | <a href="https://twitter.com/UK4Forward"><i class="fa fa-twitter"></i></a> | <a href="mailto:contact@forwarduk.xyz"><i class="fa fa-envelope"></i></a> | 2022</p>
 </div>
