--- a/index.html
+++ b/index.html
@@ -72,14 +72,16 @@ hr {
     <p>FORWARD</p>
   </div>
   <div class="middle">
-    <h1>COMING SOON</h1>
+    <h1>Forward UK</h1>
     <hr>
     <p>Follow our Twitter: <a href="https://twitter.com/UK4Forward">@UK4Forward</a> <i class="fa fa-twitter"></i></p>
     <p class="smalltext">Email us: <a href="mailto:contact@forwarduk.xyz">Send email</a> <i class="fa fa-envelope"></i></p>
     <p class="smalltext">Keep Informed: <a href="https://www.getrevue.co/profile/forwarduk">Newsletter</a> <i class="fa fa-newspaper-o"></i></p>
+    <hr>
+    <p>Documents Page: <a href="https://forwarduk.xyz/Documents">Read Documents</a> <i class="fa fa-file-text-o"></i></p>
   </div>
   <div class="bottomleft">
-    <p>We are <b>not</b> a political party.</p>
+    <p>We are <b>not</b> a political party. | 2022</p>
   </div>
 </div>
 
