--- a/documents.html
+++ b/documents.html
@@ -96,7 +96,7 @@ a:visited{
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">Forward</a>
+  <a href="https://forwarduk.xyz/" class="logo">Forward</a>
   <div class="header-right">
     <a href="https://twitter.com/UK4Forward"><i class="fa fa-twitter"></i></a>
     <a href="mailto:contact@forwarduk.xyz"><i class="fa fa-envelope"></i></a>
