--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ hr {
     <p class="smalltext">Email us: <a href="mailto:contact@forwarduk.xyz">Send email</a> <i class="fa fa-envelope"></i></p>
     <p class="smalltext">Keep Informed: <a href="https://www.getrevue.co/profile/forwarduk">Newsletter</a> <i class="fa fa-newspaper-o"></i></p>
     <hr>
-    <p>Documents Page: <a href="https://forwarduk.xyz/Documents">Read Documents</a> <i class="fa fa-file-text-o"></i></p>
+    <p>Documents Page: <a href="https://forwarduk.xyz/documents.html">Read Documents</a> <i class="fa fa-file-text-o"></i></p>
   </div>
   <div class="bottomleft">
     <p>We are <b>not</b> a political party. | 2022</p>
