--- a/404.html
+++ b/404.html
@@ -14,5 +14,5 @@
 </style>
 
 <div class="footer">
-  <p>Footer</p>
+  <p style="padding-left: 4px;">Forward UK | We are <b>not</b> a political party. | <a href="https://twitter.com/UK4Forward"><i class="fa fa-twitter"></i></a> | <a href="mailto:contact@forwarduk.xyz"><i class="fa fa-envelope"></i></a> | 2022</p>
 </div>
