--- a/404.html
+++ b/404.html
@@ -1,3 +1,6 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <title>404 | Forward</title>
 <h1>404: Page not found.</h1>
 <p><a href="index.html">Home</a></p>
