--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@ hr {
     <p class="smalltext">Keep Informed: <a href="https://www.getrevue.co/profile/forwarduk">Newsletter</a> <i class="fa fa-newspaper-o"></i></p>
     <hr>
     <p>Documents Page: <a href="https://forwarduk.xyz/documents.html">Read Documents</a> <i class="fa fa-file-text-o"></i></p>
+    
+    <iframe class="mj-w-res-iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://app.mailjet.com/widget/iframe/8PAO/OWh" width="100%"></iframe>
+
+<script type="text/javascript" src="https://app.mailjet.com/statics/js/iframeResizer.min.js"></script>
   </div>
   <div class="bottomleft">
     <p>We are <b>not</b> a political party. | 2022</p>
