--- a/index.html
+++ b/index.html
@@ -83,9 +83,18 @@ hr {
     <hr>
     <p>Documents Page: <a href="https://forwarduk.xyz/documents.html">Read Documents</a> <i class="fa fa-file-text-o"></i></p>
     
-    <iframe class="mj-w-res-iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://app.mailjet.com/widget/iframe/8PAO/OWh" width="100%"></iframe>
+<data id="mj-w-res-data" data-token="610a9532caf0014cdeafa9ce7698cd7d" class="mj-w-data" data-apikey="8PAO" data-w-id="OWA" data-lang="en_US" data-base="https://app.mailjet.com" data-width="640" data-height="479.2" data-statics="statics"></data>
 
-<script type="text/javascript" src="https://app.mailjet.com/statics/js/iframeResizer.min.js"></script>
+<div class="mj-w-button mj-w-btn" style="font-family: Ubuntu, Helvetica; color: white; padding: 0 25px; background-color: #f0622b; text-align: center; vertical-align: middle; display: inline-block; border-radius: 3px;" data-token="610a9532caf0014cdeafa9ce7698cd7d">
+    <div style="display: table; height: 45px;">
+        <div style="display: table-cell; vertical-align: middle;">
+            <div class="mj-w-button-content" style="font-family:Ubuntu, Helvetica; display: inline-block; text-align: center; font-size: 13px; vertical-align: middle;"><b>SUBSCRIBE TO NEWSLETTER!</b></div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript" src="https://app.mailjet.com/statics/js/widget.modal.js"></script>
+    
   </div>
   <div class="bottomleft">
     <p>We are <b>not</b> a political party. | 2022</p>
