--- a/documents.html
+++ b/documents.html
@@ -116,6 +116,9 @@ a:visited{
   
   <hr>
   
+  <p class="doc2">We need Regional Chairs: <a href="CallForChairs.pdf">Read here</a> <i class="fa fa-file-text"></i></p>
+  <p class="doc3">This document is our call for having regional chairs, as to allow for more localised decisions on backing candidates ahead of May 2023 Local Elections, and possible 2023 Early General Election. <b>(Last updated: 11th December, 2022)</b></p>  
+  
   <p class="doc2">More soon.</p>
   
 <div class="footer">
