--- a/documents.html
+++ b/documents.html
@@ -120,6 +120,12 @@ a:visited{
   <p class="doc3">This document is our call for having regional chairs, as to allow for more localised decisions on backing candidates ahead of May 2023 Local Elections, and possible 2023 Early General Election. <b>(Last updated: 11th December, 2022)</b></p>  
   
   <br><hr>
+ 
+  <p class="doc2">Regional Chair Specifications: <a href="Chair%20Specification.pdf">Read here</a> <i class="fa fa-file-text"></i></p>
+  <p class="doc3">This document highlights what we are expecting from a group chair, and how to apply. <b>(Last updated: 11th December, 2022)</b></p>  
+  
+  <br><hr>
+  
   <p class="doc2">More soon.</p>
   
 <div class="footer">
