--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@ hr {
     <h1>Forward UK</h1>
     <hr>
     <p>Follow our Twitter: <a href="https://twitter.com/UK4Forward">@UK4Forward</a> <i class="fa fa-twitter"></i></p>
+    <p>Get involved: <a href="join.html">JOIN FORWARD</a> <i class="fa fa-user" aria-hidden="true"></i></p>
     <p class="smalltext">Email us: <a href="mailto:contact@forwarduk.xyz">Send email</a> <i class="fa fa-envelope"></i></p>
-    <p class="smalltext">Keep Informed: <a href="https://www.getrevue.co/profile/forwarduk">Newsletter</a> <i class="fa fa-newspaper-o"></i></p>
+    <p class="smalltext">
+</p>
     <hr>
     <p>Documents Page: <a href="https://forwarduk.xyz/documents.html">Read Documents</a> <i class="fa fa-file-text-o"></i></p>
     
