--- a/index.html
+++ b/index.html
@@ -72,10 +72,14 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>FORWARD</p>
+    
+      <img style='vertical-align:middle; border-radius: 50%;' width="10%" src='logo.jpg'>
+<div style='vertical-align:middle; display:inline;'>FORWARD</div>
+    
   </div>
   <div class="middle">
     <h1>Forward UK</h1>
+    <p class="smalltext">(Active) Regions: <a href="https://forwarduk.xyz/northeast">North East</a></p>
     <hr>
     <p>Follow our Twitter: <a href="https://twitter.com/UK4Forward">@UK4Forward</a> <i class="fa fa-twitter"></i></p>
     <p>Get involved: <a href="join.html">JOIN FORWARD</a> <i class="fa fa-user" aria-hidden="true"></i></p>
