Full website rebuild

--- a/regions.html
+++ b/regions.html
@@ -1,5 +1,5 @@
 <link rel="shortcut icon" type="image/jpg" href="New-Logo.png"/>
-<title>Forward | Advocating for change</title>
+<title>Regions | Forward</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -90,41 +90,26 @@ body {
   float: left;
   width: 10%;
   padding: 15px;
-  height: 100%;
-  vertical-align:middle;
-  display: inline;
 }
 
 .column2 {
   float: left;
-  width: 65%;
+  width: 80%;
   padding: 15px;
-  height: 100%;
 }
 
 .column3 {
   float: left;
-  width: 25%;
-  height: 100%;
-  text-align: center;
+  width: 10%;
+  height: 60%;
 }
 
 .column2 a{
-	color: black;
+	color: #9a79ff;
 	text-decoration: none;
 }
 
 .column2 a:hover{
-	color: #9a79ff;
-	text-decoration: underline;
-}
-
-.column3 a{
-	color: #9a79ff;
-	text-decoration: none;
-}
-
-.column3 a:hover{
 	color: #c5b3ff;
 	text-decoration: underline;
 }
@@ -138,9 +123,9 @@ body {
 }
 
 hr {
-	width: 60%;
+	color: darkgray;
+	width: 70%;
 	border: 1px solid black;
-	border-radius: 3px;
 }
 </style>
 </head>
@@ -150,14 +135,14 @@ hr {
   <a href="index.html" class="logo">  <img style='vertical-align:middle;' width="6%" src='New-Logo.png'>
 <div style='vertical-align:middle; display:inline;'>Forward</div></a>
   <div class="header-right">
-    <a  href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="documents.html">Documents</a>
-    <a class="active" href="join.html">Join</a>
+    <a href="join.html">Join</a>
   </div>
 </div>
 
 <div class="box">
-  <h1>Forward Group for Change</h1>
+  <h1>Where we're active</h1>
   <p>Let's bring change.</p>
   <p style="font-size: 16px;">We are not a political party.</p>
 </div>
@@ -169,27 +154,18 @@ hr {
   </div>
   
   <div class="column2">
-    <iframe width="90%" height="100%" src="https://docs.google.com/forms/d/e/1FAIpQLSdYTKlFS3DgTWyd52QwfGwdSX9uyIfZLaw5YiPpdHlWmtKPhA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  
+<h1 align="center">Forward is currently only operating in the North East due to lack of regional chairs. </h1>
+<h2 align="center">Click the link(s) below to explore regions, and regional activities on regional websites.</h2>
+
+<hr>
+
+<p align="center"><a href="https://forwarduk.xyz/northeast">North East</a></p>
 
   </div>
   
   <div class="column3">
-<p align="center">By joining Forward, you will bring about change.
-   <data id="mj-w-res-data" data-token="610a9532caf0014cdeafa9ce7698cd7d" class="mj-w-data" data-apikey="8PAO" data-w-id="OWA" data-lang="en_US" data-base="https://app.mailjet.com" data-width="640" data-height="479.2" data-statics="statics"></data>
-
-<div class="mj-w-button mj-w-btn" style="font-family: Ubuntu, Helvetica; color: white; padding: 0 25px; background-color: #f0622b; text-align: center; vertical-align: middle; display: inline-block; border-radius: 3px;" data-token="610a9532caf0014cdeafa9ce7698cd7d">
-    <div style="display: table; height: 45px;">
-        <div style="display: table-cell; vertical-align: middle;">
-            <div class="mj-w-button-content" style="font-family:Ubuntu, Helvetica; display: inline-block; text-align: center; font-size: 13px; vertical-align: middle;"><b>SUBSCRIBE TO NEWSLETTER!</b></div>
-        </div>
-    </div>
-</div>
-<hr><p>Membership form not loading? <a href="https://forms.gle/a84VGUhUSwE9crWr6">Click here</a>.</p><hr><p>© ForwardUK 2023</p>
-<script type="text/javascript" src="https://app.mailjet.com/statics/js/widget.modal.js"></script>
-</div>
-</p>
-<br>
-
+ 
   </div>
 </div>
     
