--- a/candidates.html
+++ b/candidates.html
@@ -156,34 +156,34 @@ hr {
  <h2 align="center">Due to lack of regional chairs, we will only be supporting candidates in the North East region.</h2>
  <hr>
  <h3 style="padding-left: 14%;">Redcar & Cleveland's local elections are on <b>4th May, 2023</b>. Polls open 7am and close at 10pm. You can also <a href="https://www.gov.uk/government/publications/apply-for-a-postal-vote">vote by post</a>.</h3>
- <p style="padding-left: 16%;">Belmont Ward: <i>Vote Labour / Independent / Liberal Democrat to <b>GAIN</b>.</i></p> 
- <p style="padding-left: 16%;">Brotton Ward: <i>Vote Labour & Independent to <b>GAIN / HOLD</b>.</i></p> 
- <p style="padding-left: 16%;">Coatham Ward: <i>Vote Labour & Liberal Democrat to <b>HOLD & GAIN</b>.</i></p> 
- <p style="padding-left: 16%;">Dormanstown Ward: <i>Vote Labour to <b>HOLD</b>.</i></p> 
- <p style="padding-left: 16%;">Eston Ward: <i>Vote Labour & Liberal Democrat to <b>HOLD</b>.</i></p> 
- <p style="padding-left: 16%;">Grangetown Ward: <i>Vote Labour to <b>HOLD</b>.</i></p>
- <p style="padding-left: 16%;">Guisborough Ward: <i>Vote Labour to <b>GAIN</b>.</i></p>
- <p style="padding-left: 16%;">Hutton Ward: <i>Vote Liberal Democrat to <b>GAIN</b>.</i></p>
- <p style="padding-left: 16%;">Kirkleatham Ward: <i>Vote Labour & Co-Op to <b>GAIN</b>.</i></p>
- <p style="padding-left: 16%;">Lockwood Ward: <i>Vote Labour to <b>GAIN</b>.</i></p>
- <p style="padding-left: 16%;">Loftus Ward: <i>Vote Independent to <b>HOLD</b>.</i></p>
- <p style="padding-left: 16%;">Longbeck Ward: <i>Vote Vera Rider (Independent), Labour to <b>GAIN</b>.</i></p>
- <p style="padding-left: 16%;">Newcomen Ward: <i>Vote Labour & Liberal Democrat to <b>GAIN</b>.</i></p>
- <p style="padding-left: 16%;">Normanby Ward: <i>Vote Labour to <b>HOLD & GAIN</b>.</i></p>
- <p style="padding-left: 16%;">Ormesby Ward: <i>Vote Liberal Democrat to <b>HOLD</b>.</i></p>
- <p style="padding-left: 16%;">Saltburn Ward: <i>Vote Stuart Smith (Independent) & Labour & Liberal Democrat to <b>GAIN</b>.</i></p>
- <p style="padding-left: 16%;">Skelton East Ward: <i>Vote Independent, Labour, Liberal Democrat to <b>GAIN</b>.</i></p>
- <p style="padding-left: 16%;">Skelton West Ward: <i>Vote Labour to <b>GAIN</b>.</i></p>
- <p style="padding-left: 16%;">South Bank Ward: <i>Vote Labour to <b>HOLD & GAIN</b>.</i></p>
- <p style="padding-left: 16%;">St. Germain's Ward: <i>Vote Liberal Democrat to <b>HOLD</b>.</i></p>
- <p style="padding-left: 16%;">Teesville Ward: <i>Vote Labour & Teesville Independent to <b>HOLD</b>.</i></p>
- <p style="padding-left: 16%;">West Dyke Ward: <i>Vote Liberal Democrat to <b>HOLD</b>.</i></p>
- <p style="padding-left: 16%;">Wheatlands Ward: <i>Vote Liberal Democrat to <b>HOLD</b>.</i></p>
- <p style="padding-left: 16%;">Zetland Ward: <i>Vote Liberal Democrat to <b>HOLD</b>.</i></p>
+ <p style="padding-left: 16%;">Belmont Ward: <i>Vote <span style="color: #E4003B"><span style="color: #E4003B">Labour</span></span> / <span style="color: #999999"><span style="color:#999999">Independent</span></span> / <span style="color: #FAA61A"><span style="color: #FAA61A">Liberal Democrat</span></span> to <b>GAIN</b>.</i></p> 
+ <p style="padding-left: 16%;">Brotton Ward: <i>Vote <span style="color: #E4003B">Labour</span> & <span style="color:#999999">Independent</span> to <b>GAIN / HOLD</b>.</i></p> 
+ <p style="padding-left: 16%;">Coatham Ward: <i>Vote <span style="color: #E4003B">Labour</span> & <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD & GAIN</b>.</i></p> 
+ <p style="padding-left: 16%;">Dormanstown Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>HOLD</b>.</i></p> 
+ <p style="padding-left: 16%;">Eston Ward: <i>Vote <span style="color: #E4003B">Labour</span> & <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD</b>.</i></p> 
+ <p style="padding-left: 16%;">Grangetown Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>HOLD</b>.</i></p>
+ <p style="padding-left: 16%;">Guisborough Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Hutton Ward: <i>Vote <span style="color: #FAA61A">Liberal Democrat</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Kirkleatham Ward: <i>Vote <span style="color: #E4003B">Labour & Co-Op</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Lockwood Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Loftus Ward: <i>Vote <span style="color:#999999">Independent</span> to <b>HOLD</b>.</i></p>
+ <p style="padding-left: 16%;">Longbeck Ward: <i>Vote Vera Rider (<span style="color:#999999">Independent</span>), <span style="color: #E4003B">Labour</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Newcomen Ward: <i>Vote <span style="color: #E4003B">Labour</span> & <span style="color: #FAA61A">Liberal Democrat</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Normanby Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>HOLD & GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Ormesby Ward: <i>Vote <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD</b>.</i></p>
+ <p style="padding-left: 16%;">Saltburn Ward: <i>Vote Stuart Smith (<span style="color:#999999">Independent</span>) & <span style="color: #E4003B">Labour</span> & <span style="color: #FAA61A">Liberal Democrat</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Skelton East Ward: <i>Vote <span style="color:#999999">Independent</span>, <span style="color: #E4003B">Labour</span>, <span style="color: #FAA61A">Liberal Democrat</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Skelton West Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">South Bank Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>HOLD & GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">St. Germain's Ward: <i>Vote <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD</b>.</i></p>
+ <p style="padding-left: 16%;">Teesville Ward: <i>Vote <span style="color: #E4003B">Labour</span> & Teesville <span style="color:#999999">Independent</span> to <b>HOLD</b>.</i></p>
+ <p style="padding-left: 16%;">West Dyke Ward: <i>Vote <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD</b>.</i></p>
+ <p style="padding-left: 16%;">Wheatlands Ward: <i>Vote <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD</b>.</i></p>
+ <p style="padding-left: 16%;">Zetland Ward: <i>Vote <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD</b>.</i></p>
 <hr>
  <h3 style="padding-left: 14%;">Gateshead's local elections are on <b>4th May, 2023</b>. Polls open 7am and close at 10pm. You can also <a href="https://www.gov.uk/government/publications/apply-for-a-postal-vote">vote by post</a>.</h3>
- <p style="padding-left: 16%;">Birtley Ward: <i>Vote Paul Elliot (Liberal Democrat) to <b>GAIN</b>.</i></p> 
- <p style="padding-left: 16%;">Saltwell Ward: <i>Vote Leanne Brand (Liberal Democrat) to <b>GAIN</b>.</i></p> 
+ <p style="padding-left: 16%;">Birtley Ward: <i>Vote Paul Elliot (<span style="color: #FAA61A">Liberal Democrat</span>) to <b>GAIN</b>.</i></p> 
+ <p style="padding-left: 16%;">Saltwell Ward: <i>Vote Leanne Brand (<span style="color: #FAA61A">Liberal Democrat</span>) to <b>GAIN</b>.</i></p> 
  <hr>
   </div>
   
