--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
 .box {
   padding: 60px;
   text-align: center;
-  background: #9a79ff;
+  background: #579981;
   color: white;
   font-size: 30px;
 }
@@ -125,7 +125,7 @@ body {
 }
 
 .stickyheader {
-  background: #c5b3ff;
+  background: #7fa4a6;
   color: black;
     padding: 10px 16px;
 }
@@ -149,12 +149,8 @@ body {
 </head>
 <body>
 
-<div class="stickyheader" id="myStickyHeader">
-  <h2 align="center"><a href="Documents/Forward_Pledge_to_the_People.pdf">THE FORWARD PLEDGE IS NOW OUT: READ HERE</a><h2>
-</div>
-
 <div class="header">
-  <a href="index.html" class="logo">  <img style='vertical-align:middle;' width="6%" src='New-Logo.png'>
+  <a href="index.html" class="logo">  <img style='vertical-align:middle;' width="19.2px" src='New-Logo.png'>
 <div style='vertical-align:middle; display:inline;'>Forward</div></a>
   <div class="header-right">
     <a class="active" href="index.html">Home</a>
@@ -165,7 +161,7 @@ body {
 
 <div class="box">
   <h1>Forward Group for Change</h1>
-  <p>Let's bring change.</p>
+  <p>For <u>real</u> change.</p>
   <p style="font-size: 16px;">We are not a political party.</p>
   
    <data id="mj-w-res-data" data-token="610a9532caf0014cdeafa9ce7698cd7d" class="mj-w-data" data-apikey="8PAO" data-w-id="OWA" data-lang="en_US" data-base="https://app.mailjet.com" data-width="640" data-height="479.2" data-statics="statics"></data>
