--- a/join.html
+++ b/join.html
@@ -74,7 +74,7 @@ body {
 .box {
   padding: 60px;
   text-align: center;
-  background: #9a79ff;
+  background: #579981;
   color: white;
   font-size: 30px;
 }
@@ -147,7 +147,7 @@ hr {
 <body>
 
 <div class="header">
-  <a href="index.html" class="logo">  <img style='vertical-align:middle;' width="6%" src='New-Logo.png'>
+  <a href="index.html" class="logo">  <img style='vertical-align:middle;' width="19.2px" src='New-Logo.png'>
 <div style='vertical-align:middle; display:inline;'>Forward</div></a>
   <div class="header-right">
     <a  href="index.html">Home</a>
