--- a/branding.html
+++ b/branding.html
@@ -74,7 +74,7 @@ body {
 .box {
   padding: 60px;
   text-align: center;
-  background: #9a79ff;
+  background: #579981;
   color: white;
   font-size: 30px;
 }
@@ -128,7 +128,7 @@ body {
 <body>
 
 <div class="header">
-  <a href="index.html" class="logo">  <img style='vertical-align:middle;' width="6%" src='New-Logo.png'>
+  <a href="index.html" class="logo">  <img style='vertical-align:middle;' width="19.2px" src='New-Logo.png'>
 <div style='vertical-align:middle; display:inline;'>Forward</div></a>
   <div class="header-right">
     <a class="active" href="index.html">Home</a>
@@ -156,12 +156,12 @@ body {
   
   <div class="column2">
   
-<p>Main Colour: <span style="color: #9a79ff">#9a79ff</span></p>
-<p>Link Colour (Hover): <span style="color: #c5b3ff">#c5b3ff</span></p>
+<p>Main Colour: <b>Now: <span style="color: #579981">#579981</span></b> (Formerly <span style="color: #9a79ff">#9a79ff</span>)</p>
+<p>Link Colour (Hover): <b>Now: <span style="color: #7aac9c">#7aac9c</span></b> (Formerly <span style="color: #c5b3ff">#c5b3ff</span>)</p>
 
 <hr>
 
-<img width="300" src="New-Logo.png"> <img width="300" src="logo.jpg"> <img height="300" src="map.png"> <img height="300" src="Picture1.png"> <img height="300" src="https://forwarduk.xyz/northeast/map.png">
+<img width="300" src="New-Logo.png"> <img width="300" src="Round-Flower.png"> <img width="300" src="logo.jpg"> <img height="300" src="map.png"> <img height="300" src="Picture1.png"> <img height="300" src="https://forwarduk.xyz/northeast/map.png">
 
 <p>Round Logo, Square Logo, Regions Map, Old logo, ForwardNE Logo</p>
 
@@ -182,4 +182,8 @@ body {
 
 </body>
 </html>
+
+<!--<div class="stickyheader" id="myStickyHeader">
+  <h2 align="center"><a href="Documents/Forward_Pledge_to_the_People.pdf">THE FORWARD PLEDGE IS NOW OUT: READ HERE</a><h2>
+</div>-->
 
