--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ text-align: center;
 
 <br>
 
-<div class="center"><img class="center" width="50%" src="forwardvirtualmembersassembly.png"></div><br>
+<div class="center"><a href="vma.html"><img class="center" width="50%" src="forwardvirtualmembersassembly.png"></a></div><br>
 
 <p>Forward is not a political party.</p>
   
