Green Candidate in Saltburn Confirmed

--- a/candidates.html
+++ b/candidates.html
@@ -171,7 +171,7 @@ hr {
  <p style="padding-left: 16%;">Newcomen Ward: <i>Vote <span style="color: #E4003B">Labour</span> & <span style="color: #FAA61A">Liberal Democrat</span> to <b>GAIN</b>.</i></p>
  <p style="padding-left: 16%;">Normanby Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>HOLD & GAIN</b>.</i></p>
  <p style="padding-left: 16%;">Ormesby Ward: <i>Vote <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD</b>.</i></p>
- <p style="padding-left: 16%;">Saltburn Ward: <i>Vote Stuart Smith (<span style="color:#999999">Independent</span>) & <span style="color: #E4003B">Labour</span> & <span style="color: #FAA61A">Liberal Democrat</span> to <b>GAIN</b>.</i></p>
+ <p style="padding-left: 16%;">Saltburn Ward: <i>Vote Stuart Smith (<span style="color:#999999">Independent</span>) & <span style="color: #6AB023">Green</span> & <span style="color: #6AB023">Green</span> to <b>GAIN</b>.</i></p>
  <p style="padding-left: 16%;">Skelton East Ward: <i>Vote <span style="color:#999999">Independent</span>, <span style="color: #E4003B">Labour</span>, <span style="color: #FAA61A">Liberal Democrat</span> to <b>GAIN</b>.</i></p>
  <p style="padding-left: 16%;">Skelton West Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>GAIN</b>.</i></p>
  <p style="padding-left: 16%;">South Bank Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>HOLD & GAIN</b>.</i></p>
