--- a/candidates.html
+++ b/candidates.html
@@ -158,7 +158,7 @@ hr {
  <h3 style="padding-left: 14%;">Redcar & Cleveland's local elections are on <b>4th May, 2023</b>. Polls open 7am and close at 10pm. You can also <a href="https://www.gov.uk/government/publications/apply-for-a-postal-vote">vote by post</a>.</h3>
  <p style="padding-left: 16%;">Belmont Ward: <i>Vote <span style="color: #E4003B"><span style="color: #E4003B">Labour</span></span> / <span style="color: #999999"><span style="color:#999999">Independent</span></span> / <span style="color: #FAA61A"><span style="color: #FAA61A">Liberal Democrat</span></span> to <b>GAIN</b>.</i></p> 
  <p style="padding-left: 16%;">Brotton Ward: <i>Vote <span style="color: #E4003B">Labour</span> & <span style="color:#999999">Independent</span> to <b>GAIN / HOLD</b>.</i></p> 
- <p style="padding-left: 16%;">Coatham Ward: <i>Vote <span style="color: #E4003B">Labour</span> & <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD & GAIN</b>.</i></p> 
+ <p style="padding-left: 16%;">Coatham Ward: <i>Vote <span style="color: #E4003B">Labour</span> & <span style="color: #999999">Independent (Neil Baldwin)</span> to <b>HOLD</b>.</i></p> 
  <p style="padding-left: 16%;">Dormanstown Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>HOLD</b>.</i></p> 
  <p style="padding-left: 16%;">Eston Ward: <i>Vote <span style="color: #E4003B">Labour</span> & <span style="color: #FAA61A">Liberal Democrat</span> to <b>HOLD</b>.</i></p> 
  <p style="padding-left: 16%;">Grangetown Ward: <i>Vote <span style="color: #E4003B">Labour</span> to <b>HOLD</b>.</i></p>
