--- a/index.html
+++ b/index.html
@@ -182,6 +182,15 @@ text-align: center;
   cursor: pointer;
 }
 
+.column3 a {
+  text-decoration: none;
+  color: white;
+}
+
+.column3 a:hover {
+  text-decoration: underline;
+}
+
 .button2 {background-color: #7fa4a6;}
 </style>
 </head>
@@ -256,7 +265,7 @@ text-align: center;
   
   <div class="column3">
   <h1 align="center">Britain deserves better than the Conservatives.</h1>
-  <p align="center"><button class="button button2">JOIN NOW!</button></p>
+  <p align="center"><button class="button button2"><a href="join.html">JOIN NOW!</a></button></p>
   <p align="center">Membership is free and you do not have to leave current political party.</p>
   </div>
 </div>
