--- a/join.html
+++ b/join.html
@@ -72,7 +72,6 @@ body {
 }
 
 .box {
-  padding: 60px;
   text-align: center;
   background: #579981;
   color: white;
@@ -156,10 +155,7 @@ hr {
   </div>
 </div>
 
-<div class="box">
-  <h1>Forward Group for Change</h1>
-  <p>Let's bring change.</p>
-  <p style="font-size: 16px;">We are not a political party.</p>
+<div style="height: 1px; " class="box">
 </div>
     
     
