--- a/index.html
+++ b/index.html
@@ -221,25 +221,8 @@ text-align: center;
   
   <div class="column2">
   
-  <div class="xx">
-  <div class="rw" style="background-color:#699994; border-right: 3px solid black;">
-    <h2><img align="centre" width="75%" src="https://live.staticflickr.com/1919/44845072372_ceae47fb1a_b.jpg"></h2>
-    <h2 align="centre"><a href="cllrs.html">Forward Representatives</a></h2>
-  </div>
-  <div class="rw" style="background-color:#769d9a;">
-    <h2><img width="70%" src="regions.png"></h2>
-    <h2><a href="regions.html">Regions</a></h2>
-  </div>
-  <div class="rw" style="background-color:#7fa3a4;">
-    <h2><img width="70%" src="join.png"></h2>
-    <h2><a href="join.html">Join us!</a></h2>
-  </div>
-  <div class="rw" style="background-color:#94b0b4; border-right: 1px solid black;">
-    <h2><img width="70%" src="whatwewant.png"></h2>
-    <h2><a href="documents.html">Documents</a></h2>
-  </div>
-</div>
-
+  <h1>The Forward Project has been ended </h1>
+  <h3>This website will remain online until the domain expires in August. Thank you for supporting us in helping to end Tories this May in local elections.</h3>
 <br>
 
 
